--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="css/styles.css" rel="stylesheet" />
     
     <!-- Custom CSS -->
-    <link href="/custom.css" rel="stylesheet" />
+    <link href="custom.css" rel="stylesheet" />
   </head>
   
   <body>
