--- a/HACKFIESTA-SPRING25.HTML
+++ b/HACKFIESTA-SPRING25.HTML
@@ -264,7 +264,7 @@
         <li>✅ Open to all students, no experience required</li>
         <li>✅ Learn from industry professionals</li>
         <li>✅ Network with recruiters and mentors</li>
-        <li>✅ Win prizes and earn recognition</li>
+        <li>✅ Winner Certificate & Demo Promotion on LinkedIn</li>
     </ul>
 
 
@@ -280,6 +280,7 @@
         <li>🔹 <strong>Easy Track:</strong> AI-Powered Personal Assistants (Chatbots & Automation)</li>
         <li>🔹 <strong>Medium Track:</strong> AI-Powered Code Review & Debugging Tools</li>
         <li>🔹 <strong>Hard Track:</strong> AI + Blockchain for Decentralized AI Models</li>
+        <li>🔹 <strong>Tech Unicorn Track</strong> "Startup Pitch Arena": Entrepreneurial Focus: Participants must validate a tech-driven business idea and demonstrate its market potential.</li>
     </ul>
 
 
