--- a/HACKFIESTA-SPRING25.HTML
+++ b/HACKFIESTA-SPRING25.HTML
@@ -252,6 +252,14 @@
     <h2>🚀 HackFiesta Miami | Spring 2025 Edition</h2>
     <p>Join HackFiesta Miami, a virtual hackathon for students of all majors! Innovate, collaborate, and build impactful projects in AI, blockchain, automation, and web development.</p>
 
+    <h2>🔗 Registration & Event Links</h2>
+<ul>
+    <li>📝 <strong>Registration:</strong> <a href="https://go.fiu.edu/CC-HACKS" target="_blank">go.fiu.edu/CC-HACKS</a></li>
+    <li>📂 <strong>DevPost (Project Submissions):</strong> <a href="https://go.fiu.edu/hack-fiesta-1" target="_blank">go.fiu.edu/hack-fiesta-1</a></li>
+    <li>📅 <strong>LUMA RSVP:</strong> <a href="https://go.fiu.edu/hack-fiesta-3" target="_blank">go.fiu.edu/hack-fiesta-3</a></li>
+    <li>🔗 <strong>LinkedIn RSVP:</strong> <a href="https://go.fiu.edu/hack-fiesta-2" target="_blank">go.fiu.edu/hack-fiesta-2</a></li>
+</ul>
+    
     <h3>📅 Event Schedule</h3>
     <ul>
         <li>📅 <strong>March 21 - 23, 2025</strong></li>
