--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -1534,7 +1534,7 @@ body {
     
 
 
-<section id="faq-305-hackathon" style="padding: 80px 0; background: linear-gradient(135deg, #f1f5f9 0%, #e2e8f0 100%); font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; position: relative; overflow: hidden;">
+<section id="faqs" style="padding: 80px 0; background: linear-gradient(135deg, #f1f5f9 0%, #e2e8f0 100%); font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; position: relative; overflow: hidden;">
     <!-- Background Elements -->
     <div style="position: absolute; width: 500px; height: 500px; border-radius: 50%; background: linear-gradient(135deg, rgba(255, 77, 0, 0.04), rgba(255, 183, 3, 0.02)); top: -200px; left: -200px; z-index: 0;"></div>
     <div style="position: absolute; width: 400px; height: 400px; border-radius: 50%; background: linear-gradient(135deg, rgba(0, 115, 230, 0.04), rgba(0, 180, 216, 0.02)); bottom: -150px; right: -150px; z-index: 0;"></div>
@@ -2206,7 +2206,7 @@ body {
                         Looking to gain leadership experience? Join us as a <strong>student organizer</strong> and help shape the future of technology in South Florida!
                     </p>
                     <div style="margin-top: auto;">
-                        <a href="https://forms.gle/rQ27QDLk6C4EDHon8" style="display: inline-block; padding: 12px 25px; background: linear-gradient(135deg, #FF4D00, #FFB703); color: white; text-decoration: none; border-radius: 8px; font-weight: 600; font-size: 16px; transition: all 0.3s ease; box-shadow: 0 4px 10px rgba(255, 77, 0, 0.3);" onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 6px 15px rgba(255, 77, 0, 0.4)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 10px rgba(255, 77, 0, 0.3)';">
+                        <a href="https://forms.gle/B1ei13sVqV8dgQ7TA" style="display: inline-block; padding: 12px 25px; background: linear-gradient(135deg, #FF4D00, #FFB703); color: white; text-decoration: none; border-radius: 8px; font-weight: 600; font-size: 16px; transition: all 0.3s ease; box-shadow: 0 4px 10px rgba(255, 77, 0, 0.3);" onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 6px 15px rgba(255, 77, 0, 0.4)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 10px rgba(255, 77, 0, 0.3)';">
                             <i class="fas fa-star" style="margin-right: 8px;"></i> Sign Up to Organize
                         </a>
                         <p style="color: #777; font-size: 14px; margin: 15px 0 0 0;">Great for your resume and professional network!</p>
