--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -1696,7 +1696,7 @@ body {
         </div>
         
         <div style="text-align: center; margin-top: 40px;">
-            <a href="mailto:codecrunchhelp@outlook.com" style="display: inline-flex; align-items: center; padding: 12px 30px; background: linear-gradient(135deg, #FF4D00, #FFB703); color: white; text-decoration: none; border-radius: 8px; font-weight: 700; font-size: 16px; transition: all 0.3s ease; box-shadow: 0 4px 10px rgba(255, 77, 0, 0.3);" onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 6px 15px rgba(255, 77, 0, 0.4)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 10px rgba(255, 77, 0, 0.3)';">
+            <a href="mailto:codecrunch@fiu.edu" style="display: inline-flex; align-items: center; padding: 12px 30px; background: linear-gradient(135deg, #FF4D00, #FFB703); color: white; text-decoration: none; border-radius: 8px; font-weight: 700; font-size: 16px; transition: all 0.3s ease; box-shadow: 0 4px 10px rgba(255, 77, 0, 0.3);" onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 6px 15px rgba(255, 77, 0, 0.4)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 10px rgba(255, 77, 0, 0.3)';">
                 <span style="margin-right: 10px;">✉️</span> Have More Questions? Contact Us
             </a>
         </div>
@@ -2415,7 +2415,7 @@ body {
     <footer style="margin-top: 80px; text-align: center; padding: 40px 20px; background-color: #333; color: #fff;">
         <div style="max-width: 1200px; margin: 0 auto;">
             <p style="margin: 0 0 15px 0; font-size: 15px;">
-                &copy; 305 Hackathon. All rights reserved. | <a href="mailto:codecrunchhelp@outlook.com" style="color: #FFB703; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.color='#FF4D00';" onmouseout="this.style.color='#FFB703';">codecrunchhelp@outlook.com</a>
+                &copy; 305 Hackathon. All rights reserved. | <a href="mailto:codecrunch@fiu.edu" style="color: #FFB703; text-decoration: none; transition: all 0.3s ease;" onmouseover="this.style.color='#FF4D00';" onmouseout="this.style.color='#FFB703';">codecrunch@fiu.edu</a>
             </p>
             <p style="margin: 0; font-size: 15px;">&copy; Code Crunch. All rights reserved.</p>
         </div>
