--- a/contact.html
+++ b/contact.html
@@ -186,8 +186,8 @@
                 <div class="row gx-lg-5">
                     <div class="col-lg-8 mx-auto">
                         <h3>Contact Us via Email</h3>
-                        <p>Click the button below to email us directly:</p>
-                        <a href="mailto:codecrunchclub@gmail.com?cc=ibazu001@fiu.edu,apena211@fiu.edu.com&subject=Code%20Crunch%20Inquiry" class="btn btn-primary contact-button">
+                        <p>Click the button below to email us directly (codecrunch@fiu.edu):</p>
+                        <a href="mailto:codecrunch@fiu.edu?cc=ibazu001@fiu.edu,codecrunch@fiu.edu&subject=Code%20Crunch%20Inquiry" class="btn btn-primary contact-button">
                             Email Us
                         </a>
                     </div>
