--- a/index.html
+++ b/index.html
@@ -575,8 +575,8 @@
         <p class="fs-5 mb-4">
           If you encounter any issues with accessing our resources or have questions about Code Crunch:
         </p>
-        <a href="mailto:codecrunchhelp@outlook.com" class="btn btn-lg btn-success">
-          <i class="bi bi-envelope"></i> Contact Support Team (codecrunchhelp@outlook.com)
+        <a href="mailto:codecrunch@fiu.edu" class="btn btn-lg btn-success">
+          <i class="bi bi-envelope"></i> Contact Support Team (codecrunch@fiu.edu)
         </a>
       </div>
     </section>
