--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -1521,8 +1521,8 @@ body {
             <p style="font-size: 18px; color: #333; margin-bottom: 20px; font-weight: 500;">
                 Want to collaborate with us on a track for Spring 2025?
             </p>
-            <a href="mailto:codecrunchclub@gmail.com" style="display: inline-flex; align-items: center; padding: 12px 30px; background: linear-gradient(135deg, #FF4D00, #FFB703); color: white; text-decoration: none; border-radius: 8px; font-weight: 700; font-size: 16px; transition: all 0.3s ease; box-shadow: 0 4px 10px rgba(255, 77, 0, 0.3);" onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 6px 15px rgba(255, 77, 0, 0.4)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 10px rgba(255, 77, 0, 0.3)';">
-                <i class="fas fa-envelope" style="margin-right: 10px;"></i> codecrunchclub@gmail.com
+            <a href="mailto:codecrunch@fiu.edu" style="display: inline-flex; align-items: center; padding: 12px 30px; background: linear-gradient(135deg, #FF4D00, #FFB703); color: white; text-decoration: none; border-radius: 8px; font-weight: 700; font-size: 16px; transition: all 0.3s ease; box-shadow: 0 4px 10px rgba(255, 77, 0, 0.3);" onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 6px 15px rgba(255, 77, 0, 0.4)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 10px rgba(255, 77, 0, 0.3)';">
+                <i class="fas fa-envelope" style="margin-right: 10px;"></i> codecrunch@fiu.edu
             </a>
         </div>
     </div>
@@ -2406,7 +2406,7 @@ body {
             <p style="font-size: 18px; color: #333; margin-bottom: 20px; font-weight: 500;">
                 Want to collaborate with us for future hackathons?
             </p>
-            <a href="mailto:codecrunchclub@gmail.com" style="display: inline-flex; align-items: center; padding: 12px 30px; background: linear-gradient(135deg, #FF4D00, #FFB703); color: white; text-decoration: none; border-radius: 8px; font-weight: 700; font-size: 16px; transition: all 0.3s ease; box-shadow: 0 4px 10px rgba(255, 77, 0, 0.3);" onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 6px 15px rgba(255, 77, 0, 0.4)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 10px rgba(255, 77, 0, 0.3)';">
+            <a href="mailto:codecrunch@fiu.edu" style="display: inline-flex; align-items: center; padding: 12px 30px; background: linear-gradient(135deg, #FF4D00, #FFB703); color: white; text-decoration: none; border-radius: 8px; font-weight: 700; font-size: 16px; transition: all 0.3s ease; box-shadow: 0 4px 10px rgba(255, 77, 0, 0.3);" onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 6px 15px rgba(255, 77, 0, 0.4)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 10px rgba(255, 77, 0, 0.3)';">
                 <span style="margin-right: 10px;">✉️</span> Contact Us
             </a>
         </div>
