--- a/305HACK-SPRING25.html
+++ b/305HACK-SPRING25.html
@@ -751,9 +751,9 @@ body {
             <a href="#featured-hackathon" style="display: inline-block; padding: 15px 30px; background: #FF4D00; color: white; text-decoration: none; font-weight: bold; border-radius: 30px; font-size: 1.2rem; box-shadow: 0 4px 12px rgba(0,0,0,0.2); transition: all 0.3s ease;" onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 8px 20px rgba(0,0,0,0.3)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 12px rgba(0,0,0,0.2)';">
                 Join Next Hackathon <span style="margin-left: 8px;">🚀</span>
             </a>
-            <a href="#about" style="display: inline-block; padding: 15px 30px; background: rgba(255,255,255,0.2); color: white; text-decoration: none; font-weight: bold; border-radius: 30px; font-size: 1.2rem; box-shadow: 0 4px 12px rgba(0,0,0,0.1); backdrop-filter: blur(10px); transition: all 0.3s ease;" onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 8px 20px rgba(0,0,0,0.2)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 12px rgba(0,0,0,0.1)';">
+            <!-- <a href="#about" style="display: inline-block; padding: 15px 30px; background: rgba(255,255,255,0.2); color: white; text-decoration: none; font-weight: bold; border-radius: 30px; font-size: 1.2rem; box-shadow: 0 4px 12px rgba(0,0,0,0.1); backdrop-filter: blur(10px); transition: all 0.3s ease;" onmouseover="this.style.transform='translateY(-3px)'; this.style.boxShadow='0 8px 20px rgba(0,0,0,0.2)';" onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='0 4px 12px rgba(0,0,0,0.1)';">
                 Learn More <span style="margin-left: 8px;">👋</span>
-            </a>
+            </a> -->
         </div>
         
 <!-- Key Event Stats -->
