--- a/HACKFIESTA-SPRING25.HTML
+++ b/HACKFIESTA-SPRING25.HTML
@@ -294,11 +294,11 @@
                 <h4 style="color: #9d4edd; margin-bottom: 0.75rem;">Industry Mentorship</h4>
                 <p>Learn directly from tech professionals who've been there, done that</p>
             </div>
-            <div style="background: rgba(255, 255, 255, 0.05); border-radius: 12px; padding: 1.5rem; transition: transform 0.3s ease; backdrop-filter: blur(4px); border: 1px solid rgba(255, 255, 255, 0.1); text-align: center;">
+            <!-- <div style="background: rgba(255, 255, 255, 0.05); border-radius: 12px; padding: 1.5rem; transition: transform 0.3s ease; backdrop-filter: blur(4px); border: 1px solid rgba(255, 255, 255, 0.1); text-align: center;">
                 <div style="font-size: 2rem; margin-bottom: 1rem;">🤝</div>
                 <h4 style="color: #9d4edd; margin-bottom: 0.75rem;">Career Connections</h4>
                 <p>Network with recruiters looking for fresh talent like you</p>
-            </div>
+            </div> -->
             <div style="background: rgba(255, 255, 255, 0.05); border-radius: 12px; padding: 1.5rem; transition: transform 0.3s ease; backdrop-filter: blur(4px); border: 1px solid rgba(255, 255, 255, 0.1); text-align: center;">
                 <div style="font-size: 2rem; margin-bottom: 1rem;">🏆</div>
                 <h4 style="color: #9d4edd; margin-bottom: 0.75rem;">Recognition</h4>
