--- a/HACKFIESTA-SPRING25.HTML
+++ b/HACKFIESTA-SPRING25.HTML
@@ -248,19 +248,25 @@
 </div> -->
 
 <!-- Hackathon Details -->
-<!-- Hackathon Details -->
 <section id="about" class="content-section" style="max-width: 1200px; margin: 0 auto; padding: 2rem; background: linear-gradient(135deg, rgba(18, 18, 40, 0.95) 0%, rgba(36, 16, 52, 0.95) 100%); border-radius: 12px; box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3); color: #fff;">
     <h2 style="font-size: 2.5rem; background: linear-gradient(90deg, #ff00cc, #3333ff); -webkit-background-clip: text; background-clip: text; color: transparent; margin-bottom: 1.5rem; text-align: center;">🚀 HackFiesta Miami | Spring 2025 Edition</h2>
-    <p style="font-size: 1.2rem; text-align: center; margin-bottom: 2rem; line-height: 1.6; color: #e0e0ff;">South Florida's premier virtual hackathon where innovation meets opportunity! Connect, create, and code your way to success with students across all disciplines.</p>
+    <p style="font-size: 1.2rem; text-align: center; margin-bottom: 2rem; line-height: 1.6; color: #e0e0ff;">South Florida's premier <strong>100% VIRTUAL</strong> hackathon where innovation meets opportunity! Connect, create, and code your way to success with students across all disciplines from anywhere with an internet connection.</p>
     
     <div style="margin: 3rem 0;">
         <h3 style="color: #9d4edd; text-align: center; margin-bottom: 1.5rem; font-size: 1.5rem;">🗓️ Mark Your Calendar</h3>
         <ul style="list-style: none; padding: 0; display: flex; flex-wrap: wrap; justify-content: center; gap: 1.5rem; margin: 1.5rem 0;">
             <li style="background: rgba(255, 255, 255, 0.1); padding: 0.75rem 1.5rem; border-radius: 8px; display: flex; align-items: center; gap: 0.5rem; backdrop-filter: blur(4px); border: 1px solid rgba(255, 255, 255, 0.1);"><span style="font-size: 1.2rem;">📅</span> <strong>March 21-23, 2025</strong></li>
-            <li style="background: rgba(255, 255, 255, 0.1); padding: 0.75rem 1.5rem; border-radius: 8px; display: flex; align-items: center; gap: 0.5rem; backdrop-filter: blur(4px); border: 1px solid rgba(255, 255, 255, 0.1);"><span style="font-size: 1.2rem;">🚦</span> <strong>Kickoff:</strong> Friday at 8:00 PM EST</li>
+            <li style="background: rgba(255, 255, 255, 0.1); padding: 0.75rem 1.5rem; border-radius: 8px; display: flex; align-items: center; gap: 0.5rem; backdrop-filter: blur(4px); border: 1px solid rgba(255, 255, 255, 0.1);"><span style="font-size: 1.2rem;">🚦</span> <strong>Start Coding:</strong> Friday at 8:00 PM EST from anywhere</li>
             <li style="background: rgba(255, 255, 255, 0.1); padding: 0.75rem 1.5rem; border-radius: 8px; display: flex; align-items: center; gap: 0.5rem; backdrop-filter: blur(4px); border: 1px solid rgba(255, 255, 255, 0.1);"><span style="font-size: 1.2rem;">🏁</span> <strong>Submissions Due:</strong> Sunday at 8:00 AM EST</li>
             <li style="background: rgba(255, 255, 255, 0.1); padding: 0.75rem 1.5rem; border-radius: 8px; display: flex; align-items: center; gap: 0.5rem; backdrop-filter: blur(4px); border: 1px solid rgba(255, 255, 255, 0.1);"><span style="font-size: 1.2rem;">⏱️</span> <strong>36 Hours</strong> of non-stop innovation</li>
         </ul>
+    </div>
+
+    <div style="margin: 3rem 0; background: rgba(255, 255, 255, 0.05); border-radius: 12px; padding: 1.5rem; backdrop-filter: blur(4px); border: 1px solid rgba(255, 255, 255, 0.1);">
+        <h3 style="color: #ff6b6b; text-align: center; margin-bottom: 1.5rem; font-size: 1.5rem;">💻 FULLY VIRTUAL EVENT</h3>
+        <p style="text-align: center; margin-bottom: 1rem;">Participate from anywhere with an internet connection! No physical attendance required.</p>
+        <p style="text-align: center; margin-bottom: 1rem;">All mentorship and support provided online through the Club Server in dedicated hackathon channels.</p>
+        <p style="text-align: center; font-weight: bold; color: #9d4edd;">Collaborate with teammates remotely and showcase your skills from the comfort of your home!</p>
     </div>
 
     <div style="margin: 3rem 0;">
@@ -291,14 +297,9 @@
             </div>
             <div style="background: rgba(255, 255, 255, 0.05); border-radius: 12px; padding: 1.5rem; transition: transform 0.3s ease; backdrop-filter: blur(4px); border: 1px solid rgba(255, 255, 255, 0.1); text-align: center;">
                 <div style="font-size: 2rem; margin-bottom: 1rem;">👩‍💼</div>
-                <h4 style="color: #9d4edd; margin-bottom: 0.75rem;">Industry Mentorship</h4>
-                <p>Learn directly from tech professionals who've been there, done that</p>
+                <h4 style="color: #9d4edd; margin-bottom: 0.75rem;">Online Industry Mentorship</h4>
+                <p>Learn directly from tech professionals through our virtual club server channels</p>
             </div>
-            <!-- <div style="background: rgba(255, 255, 255, 0.05); border-radius: 12px; padding: 1.5rem; transition: transform 0.3s ease; backdrop-filter: blur(4px); border: 1px solid rgba(255, 255, 255, 0.1); text-align: center;">
-                <div style="font-size: 2rem; margin-bottom: 1rem;">🤝</div>
-                <h4 style="color: #9d4edd; margin-bottom: 0.75rem;">Career Connections</h4>
-                <p>Network with recruiters looking for fresh talent like you</p>
-            </div> -->
             <div style="background: rgba(255, 255, 255, 0.05); border-radius: 12px; padding: 1.5rem; transition: transform 0.3s ease; backdrop-filter: blur(4px); border: 1px solid rgba(255, 255, 255, 0.1); text-align: center;">
                 <div style="font-size: 2rem; margin-bottom: 1rem;">🏆</div>
                 <h4 style="color: #9d4edd; margin-bottom: 0.75rem;">Recognition</h4>
@@ -308,11 +309,10 @@
     </div>
 
     <div style="text-align: center; margin-top: 3rem; padding: 2rem; background: linear-gradient(135deg, rgba(157, 78, 221, 0.2) 0%, rgba(255, 107, 107, 0.2) 100%); border-radius: 12px;">
-        <h3 style="font-size: 1.5rem; margin-bottom: 1rem;">Ready to transform your ideas into reality?</h3>
+        <h3 style="font-size: 1.5rem; margin-bottom: 1rem;">Ready to transform your ideas into reality from anywhere?</h3>
         <p>Join students from all majors in this virtual innovation playground!</p>
         <a href="https://go.fiu.edu/CC-HACKS" target="_blank" style="display: inline-block; margin-top: 1.5rem; padding: 1rem 2rem; background: linear-gradient(45deg, #9d4edd, #ff6b6b); color: white; text-decoration: none; border-radius: 50px; font-weight: bold; transition: all 0.3s ease; box-shadow: 0 4px 15px rgba(157, 78, 221, 0.4);">Secure Your Spot Today!</a>
     </div>
-</section>
 </section>
 
 <!-- Hackathon Tracks -->
