--- a/HACKFIESTA-SPRING25.HTML
+++ b/HACKFIESTA-SPRING25.HTML
@@ -377,7 +377,7 @@
     </div>
     
     <div style="text-align: center; margin-top: 2rem; padding: 1.5rem; background: rgba(255, 255, 255, 0.05); border-radius: 12px;">
-        <p style="font-style: italic; color: #e0e0ff;">Not sure which track to choose? Connect with our mentors during the kickoff session for guidance!</p>
+        <p style="font-style: italic; color: #e0e0ff;">Not sure which track to choose? Connect with our mentors on discord!</p>
     </div>
 </section>
 
