--- a/HACKFIESTA-SPRING25.HTML
+++ b/HACKFIESTA-SPRING25.HTML
@@ -399,7 +399,7 @@
         <div class="faq-item">
             <button class="faq-question">When is Hack Fiesta Miami?</button>
             <div class="faq-answer">
-                Hack Fiesta Miami will take place in-person from <strong>March 28th to 30th, 2025</strong>. The event will run for <strong>36 hours</strong>, filled with hacking, networking, fun activities, and exclusive speaker sessions.
+                Hack Fiesta Miami will take place in-person from <strong>March 28th to 30th, 2025</strong>. The event will run for <strong>36 hours</strong>, filled with hacking.
             </div>
         </div>
 
@@ -415,7 +415,7 @@
         <div class="faq-item">
             <button class="faq-question">Why should I attend Hack Fiesta Miami?</button>
             <div class="faq-answer">
-                Hack Fiesta Miami is more than just a hackathon—it’s a chance to <strong>learn, build, and connect</strong> with fellow innovators. From hands-on workshops and mentorship to networking opportunities and incredible prizes, you’ll leave with valuable experiences and new skills.
+                Hack Fiesta Miami is more than just a hackathon—it’s a chance to <strong>learn, build, and connect</strong> with fellow innovators. From hands-on workshops and mentorship to networking opportunities and Winner certificates and LinkedIn promotion for standout projects, you’ll leave with valuable experiences and new skills.
             </div>
         </div>
 
@@ -423,7 +423,7 @@
         <div class="faq-item">
             <button class="faq-question">Is Hack Fiesta Miami an in-person event?</button>
             <div class="faq-answer">
-                Yes, Hack Fiesta Miami will be <strong>fully in-person</strong>, allowing for a more immersive experience. Participants will have access to dedicated workspaces, networking events, and in-person mentorship.
+                Yes, Hack Fiesta Miami will be <strong>fully virtual</strong>.
             </div>
         </div>
 
@@ -439,9 +439,10 @@
         <div class="faq-item">
             <button class="faq-question">Are travel stipends available?</button>
             <div class="faq-answer">
-                Unfortunately, <strong>Hack Fiesta Miami does not provide travel stipends</strong> at this time. However, we encourage you to explore funding options through your university or local organizations.
+                Hack Fiesta Miami is a <strong>fully virtual event</strong>, so travel is not required and no travel stipends are needed. Join us from anywhere in the world!
             </div>
         </div>
+
 
         <!-- Question 8 -->
         <div class="faq-item">
@@ -455,9 +456,10 @@
         <div class="faq-item">
             <button class="faq-question">What should I bring?</button>
             <div class="faq-answer">
-                Bring your <strong>laptop, charger, student ID, and any additional hardware</strong> you may need for your project. We’ll provide <strong>Wi-Fi, food, swag, and workspaces</strong> throughout the event.
+                Since Hack Fiesta Miami is a <strong>fully virtual event</strong>, all you need is a <strong>laptop, charger, and a stable internet connection</strong>. Suggested: headphones, snacks, and a creative mindset!
             </div>
         </div>
+
 
         <!-- Question 10 -->
         <div class="faq-item">
