--- a/HACKFIESTA-SPRING25.HTML
+++ b/HACKFIESTA-SPRING25.HTML
@@ -515,13 +515,16 @@
                     <img src="https://github.com/user-attachments/assets/cb30e307-b84d-41e1-b6dd-d58d5420b97f" alt="Epic Logo">
                 </div>
                 <div class="contributor-card">
-                    <img src="https://github.com/user-attachments/assets/1252a097-5e1c-4079-8985-df5f0c298f9f" alt="Honors College">
+                    <img src="https://github.com/user-attachments/assets/14ba2be9-c1c3-4860-8254-5cd6a9d6bcc3" alt="Honors College">
                 </div>
                 <div class="contributor-card">
-                    <img src="https://github.com/user-attachments/assets/865e0c61-ddaf-42c3-afc0-8b8a8b5f78f6" alt="CEC">
+                    <img src="https://github.com/user-attachments/assets/400617da-87eb-494b-ad60-5cf13269cfc6" alt="CEC">
                 </div>
                 <div class="contributor-card">
-                    <img src="https://github.com/user-attachments/assets/aac87410-602c-497b-aa37-79b10dc765e6" alt="Sponsor Logo">
+                    <img src="https://github.com/user-attachments/assets/b14b4455-c366-4973-9369-e94e9f9df47d" alt="kfucis">
+                </div>
+                <div class="contributor-card">
+                    <img src="https://github.com/user-attachments/assets/e4e9e02e-6a44-4fd4-8d8b-3f04cf10905d" alt="business">
                 </div>
             </div>
         </div>
