--- a/HACKFIESTA-SPRING25.HTML
+++ b/HACKFIESTA-SPRING25.HTML
@@ -466,7 +466,7 @@
                 </div>
                 
                 <div style="background: rgba(255, 184, 0, 0.08); padding: 1.5rem; border-radius: 12px; border-left: 3px solid rgba(255, 184, 0, 0.5);">
-                    <h5 style="font-size: 1.1rem; color: #ffb800; margin-bottom: 1rem; font-weight: 600;">3. 2-Minute Demo Video</h5>
+                    <h5 style="font-size: 1.1rem; color: #ffb800; margin-bottom: 1rem; font-weight: 600;">3. Demo Video (Max 5-min)</h5>
                     <p style="margin-bottom: 1rem; line-height: 1.6; color: #bbb; font-size: 1rem;">A short pitch-style video featuring:</p>
                     <ul style="list-style-type: none; padding-left: 0; margin-bottom: 0.5rem; color: #bbb;">
                         <li style="margin-bottom: 0.5rem; font-size: 1rem; display: flex; align-items: center;">
