--- a/HACKFIESTA-SPRING25.HTML
+++ b/HACKFIESTA-SPRING25.HTML
@@ -234,6 +234,8 @@
                 <li class="nav-item"><a class="nav-link" href="index.html">Code Crunch</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#tracks">Tracks</a></li>
+                <li class="nav-item"><a class="nav-link" href="#submission">Submissions Req.</a></li>
+                <li class="nav-item"><a class="nav-link" href="#judges">Judges</a></li>
                 <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contributors">Contributors</a></li>
             </ul>
