--- a/HACKFIESTA-SPRING25.HTML
+++ b/HACKFIESTA-SPRING25.HTML
@@ -237,6 +237,7 @@
                 <li class="nav-item"><a class="nav-link" href="#submission">Submissions Req.</a></li>
                 <li class="nav-item"><a class="nav-link" href="#judges">Judges</a></li>
                 <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
+                <li class="nav-item"><a class="nav-link" href="hack-code-of-conduct.html">Code of Conduct</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contributors">Contributors</a></li>
             </ul>
         </div>
