--- a/hack-rules.html
+++ b/hack-rules.html
@@ -349,8 +349,11 @@
             <div class="nav-links">
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="index.html" class="nav-link active">Hackathons</a>
-                <a href="#" class="nav-link">Resources</a>
+                <a href="hack-resources.html" class="nav-link">Resources</a>
+                <a href="hack-rules.html" class="nav-link">Rules & Guidelines</a>
+                <a href="hack-code-of-conduct.html" class="nav-link">Code of Conduct</a>
                 <a href="https://www.linkedin.com/company/code-crunch-club/" class="nav-link">Linkedin Community</a>
+
             </div>
         </div>
     </nav>
