--- a/HACKFIESTA-SPRING25.HTML
+++ b/HACKFIESTA-SPRING25.HTML
@@ -232,6 +232,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="index.html">Code Crunch</a></li>
+                <li class="nav-item"><a class="nav-link" href="hackathons.html">Hackathons</a></li>
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#tracks">Tracks</a></li>
                 <li class="nav-item"><a class="nav-link" href="#submission">Submissions Req.</a></li>
@@ -239,6 +240,7 @@
                 <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
                 <li class="nav-item"><a class="nav-link" href="hack-code-of-conduct.html">Code of Conduct</a></li>
                 <li class="nav-item"><a class="nav-link" href="hack-rules.html">Rules</a></li>
+                <li class="nav-item"><a class="nav-link" href="hack-resources.html">Resources</a></li>
                 <li class="nav-item"><a class="nav-link" href="#contributors">Contributors</a></li>
             </ul>
         </div>
