--- a/hack-rules.html
+++ b/hack-rules.html
@@ -348,7 +348,7 @@
             </a>
             <div class="nav-links">
                 <a href="index.html" class="nav-link">Home</a>
-                <a href="index.html" class="nav-link active">Hackathons</a>
+                <a href="hackathons.html" class="nav-link active">Hackathons</a>
                 <a href="hack-resources.html" class="nav-link">Resources</a>
                 <a href="hack-rules.html" class="nav-link">Rules & Guidelines</a>
                 <a href="hack-code-of-conduct.html" class="nav-link">Code of Conduct</a>
