--- a/index.html
+++ b/index.html
@@ -45,7 +45,14 @@
             <li class="nav-item">
               <a class="nav-link" href="about.html">About</a>
             </li>
-            <li class="nav-item dropdown">
+
+
+            <li class="nav-item">
+              <a class="nav-link" href="hackathons.html">Hackathons</a>
+            </li>
+
+
+            <!-- <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="hackathonsDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Hackathons
               </a>
@@ -54,7 +61,7 @@
                 <li><a class="dropdown-item" href="HACKFIESTA-SPRING25.HTML">HackFiesta</a></li>
                 <li><a class="dropdown-item" href="empowher-agenda.html">EmpowHer Hackathon</a></li>
               </ul>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="Schedules.html">Schedule</a>
             </li>
