--- a/hack-submissions-req.html
+++ b/hack-submissions-req.html
@@ -500,7 +500,7 @@
                 <a href="index.html" class="nav-link">Home</a>
                 <a href="hackathons.html" class="nav-link">Hackathons</a>
                 <a href="hack-resources.html" class="nav-link">Resources</a>
-                <a href="hack-submission.html" class="nav-link active">Submission Req.</a>
+                <a href="hack-submissions-req.html" class="nav-link active">Submission Req.</a>
                 <a href="hack-rules.html" class="nav-link">Rules & Guidelines</a>
                 <a href="hack-code-of-conduct.html" class="nav-link">Code of Conduct</a>
             </div>
