--- a/hack-rules.html
+++ b/hack-rules.html
@@ -351,6 +351,7 @@
                 <a href="hackathons.html" class="nav-link active">Hackathons</a>
                 <a href="hack-resources.html" class="nav-link">Resources</a>
                 <a href="hack-submissions-req.html" class="nav-link active">Submission Req.</a>
+                <a href="hack-evaluation-criteria.html" class="nav-link">Judging Criteria</a>
                 <a href="hack-rules.html" class="nav-link">Rules & Guidelines</a>
                 <a href="hack-code-of-conduct.html" class="nav-link">Code of Conduct</a>
                 <a href="https://www.linkedin.com/company/code-crunch-club/" class="nav-link">Linkedin Community</a>
