--- a/hack-resources.html
+++ b/hack-resources.html
@@ -538,13 +538,13 @@
             </a>
             <div class="nav-links">
                 <a href="index.html" class="nav-link">Home</a>
-                <a href="hackathons.html" class="nav-link active">Hackathons</a>
-                <a href="hack-resources.html" class="nav-link">Resources</a>
-                <a href="hack-submissions-req.html" class="nav-link active">Submission Req.</a>
+                <a href="hackathons.html" class="nav-link">Hackathons</a>
+                <a href="hack-resources.html" class="nav-link active">Resources</a>
+                <a href="hack-submissions-req.html" class="nav-link">Submission Requirements</a>
                 <a href="hack-evaluation-criteria.html" class="nav-link">Judging Criteria</a>
                 <a href="hack-rules.html" class="nav-link">Rules & Guidelines</a>
                 <a href="hack-code-of-conduct.html" class="nav-link">Code of Conduct</a>
-                <a href="https://www.linkedin.com/company/code-crunch-club/" class="nav-link">Linkedin Community</a>
+                <a href="https://www.linkedin.com/company/code-crunch-club/" class="nav-link">LinkedIn Community</a>
 
             </div>
         </div>
@@ -553,9 +553,9 @@
     <header class="header">
         <div class="container header-container">
             <div class="breadcrumbs">
-                <a href="#" class="breadcrumb-link">Home</a>
+                <a href="index.html" class="breadcrumb-link">Home</a>
                 <span class="breadcrumb-separator">/</span>
-                <a href="#" class="breadcrumb-link">Hackathon</a>
+                <a href="hackathons.html" class="breadcrumb-link">Hackathon</a>
                 <span class="breadcrumb-separator">/</span>
                 <span>Resources</span>
             </div>
@@ -850,15 +850,15 @@
     <div class="contact-grid" style="margin-top: 2rem;">
         <div class="contact-card">
             <h3 class="contact-title">Hackathon Support</h3>
-            <a href="#" class="contact-link">
-                <svg class="contact-icon" xmlns="https://ba-00001.github.io/codecrunchclub/hack-code-of-conduct.html" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+            <a href="hack-code-of-conduct.html" class="contact-link">
+                <svg class="contact-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
                     <path d="M8 4.754a3.246 3.246 0 1 0 0 6.492 3.246 3.246 0 0 0 0-6.492zM5.754 8a2.246 2.246 0 1 1 4.492 0 2.246 2.246 0 0 1-4.492 0z"/>
                     <path d="M9.796 1.343c-.527-1.79-3.065-1.79-3.592 0l-.094.319a.873.873 0 0 1-1.255.52l-.292-.16c-1.64-.892-3.433.902-2.54 2.541l.159.292a.873.873 0 0 1-.52 1.255l-.319.094c-1.79.527-1.79 3.065 0 3.592l.319.094a.873.873 0 0 1 .52 1.255l-.16.292c-.892 1.64.901 3.434 2.541 2.54l.292-.159a.873.873 0 0 1 1.255.52l.094.319c.527 1.79 3.065 1.79 3.592 0l.094-.319a.873.873 0 0 1 1.255-.52l.292.16c1.64.893 3.434-.902 2.54-2.541l-.159-.292a.873.873 0 0 1 .52-1.255l.319-.094c1.79-.527 1.79-3.065 0-3.592l-.319-.094a.873.873 0 0 1-.52-1.255l.16-.292c.893-1.64-.902-3.433-2.541-2.54l-.292.159a.873.873 0 0 1-1.255-.52l-.094-.319zm-2.633.283c.246-.835 1.428-.835 1.674 0l.094.319a1.873 1.873 0 0 0 2.693 1.115l.291-.16c.764-.415 1.6.42 1.184 1.185l-.159.292a1.873 1.873 0 0 0 1.116 2.692l.318.094c.835.246.835 1.428 0 1.674l-.319.094a1.873 1.873 0 0 0-1.115 2.693l.16.291c.415.764-.42 1.6-1.185 1.184l-.291-.159a1.873 1.873 0 0 0-2.693 1.116l-.094.318c-.246.835-1.428.835-1.674 0l-.094-.319a1.873 1.873 0 0 0-2.692-1.115l-.292.16c-.764.415-1.6-.42-1.184-1.185l.159-.291A1.873 1.873 0 0 0 1.945 8.93l-.319-.094c-.835-.246-.835-1.428 0-1.674l.319-.094A1.873 1.873 0 0 0 3.06 4.377l-.16-.292c-.415-.764.42-1.6 1.185-1.184l.292.159a1.873 1.873 0 0 0 2.692-1.115l.094-.319z"/>
                 </svg>
                 Code of Conduct
             </a>
-            <a href="#" class="contact-link">
-                <svg class="contact-icon" xmlns="https://ba-00001.github.io/codecrunchclub/hack-rules.html" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
+            <a href="hack-rules.html" class="contact-link">
+                <svg class="contact-icon" xmlns="http://www.w3.org/2000/svg"width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
                     <path d="M5.5 7a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1h-5zM5 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm0 2a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 0 1h-2a.5.5 0 0 1-.5-.5z"/>
                     <path d="M9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.5L9.5 0zm0 1v2A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5z"/>
                 </svg>
