--- a/hack-rules.html
+++ b/hack-rules.html
@@ -348,13 +348,13 @@
             </a>
             <div class="nav-links">
                 <a href="index.html" class="nav-link">Home</a>
-                <a href="hackathons.html" class="nav-link active">Hackathons</a>
+                <a href="hackathons.html" class="nav-link">Hackathons</a>
                 <a href="hack-resources.html" class="nav-link">Resources</a>
-                <a href="hack-submissions-req.html" class="nav-link active">Submission Req.</a>
+                <a href="hack-submissions-req.html" class="nav-link">Submission Requirements</a>
                 <a href="hack-evaluation-criteria.html" class="nav-link">Judging Criteria</a>
-                <a href="hack-rules.html" class="nav-link">Rules & Guidelines</a>
+                <a href="hack-rules.html" class="nav-link active">Rules & Guidelines</a>
                 <a href="hack-code-of-conduct.html" class="nav-link">Code of Conduct</a>
-                <a href="https://www.linkedin.com/company/code-crunch-club/" class="nav-link">Linkedin Community</a>
+                <a href="https://www.linkedin.com/company/code-crunch-club/" class="nav-link">LinkedIn Community</a>
 
             </div>
         </div>
